Bug #66868 --> Location of profile is incorrect shown when the path contains non-ascii chars

Patch by Mike Kaply

r=dougt
sr=tor