xpcom/obsolete/nsFileSpecImpl.cpp
@@ -42,6 +42,7 @@
 #include "nsFileStream.h"
 
 #include "nsILocalFile.h"
+#include "nsNativeCharsetUtils.h"
 
 #include "prmem.h"
 
@@ -208,6 +209,34 @@ NS_IMETHODIMP nsFileSpecImpl::SetNativePath(const char * aNativePath)
 //----------------------------------------------------------------------------------------
 {
 	mFileSpec = aNativePath;
+	return NS_OK;
+}
+
+//----------------------------------------------------------------------------------------
+NS_IMETHODIMP nsFileSpecImpl::GetUnicodePath(PRUnichar * *aUnicodePath)
+//----------------------------------------------------------------------------------------
+{
+	TEST_OUT_PTR(aUnicodePath)
+	nsAutoString unicode;
+	nsCAutoString native;
+	native = mFileSpec.GetNativePathCString();
+	NS_CopyNativeToUnicode(native, unicode);
+	*aUnicodePath = nsCRT::strdup(unicode.get());
+	if (!*aUnicodePath)
+		return NS_ERROR_OUT_OF_MEMORY;
+	return NS_OK;
+}
+
+//----------------------------------------------------------------------------------------
+NS_IMETHODIMP nsFileSpecImpl::SetUnicodePath(const PRUnichar * aUnicodePath)
+//----------------------------------------------------------------------------------------
+{
+	nsAutoString unicode;
+	nsCAutoString native;
+
+	unicode = aUnicodePath;
+	NS_CopyUnicodeToNative(unicode, native);
+	mFileSpec = native.get();
 	return NS_OK;
 }
 
